--- a/package.json
+++ b/package.json
@@ -1,14 +1,23 @@
 {
-  "name": "package.json",
+  "name": "ltmanguonmo",
   "version": "1.0.0",
-  "main": "learn_nodejs.js",
+  "main": "index.js",
+  "type": "module",
   "scripts": {
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "package.json": "file:"
-  }
+    "ejs": "^3.1.10",
+    "express": "^4.21.0",
+    "ltmanguonmo": "file:",
+    "mongodb": "^6.10.0",
+    "mongoose": "^8.7.2",
+    "nodemon": "^3.1.7",
+    "yarn": "^1.22.22"
+  },
+  "packageManager": "yarn@4.4.1"
 }
