--- a/BaiTrenLop/package.json
+++ b/BaiTrenLop/package.json
@@ -11,9 +11,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "body-parser": "^1.20.3",
     "ejs": "^3.1.10",
     "express": "^4.21.0",
     "ltmanguonmo": "file:",
+    "method-override": "^3.0.0",
     "mongodb": "^6.10.0",
     "mongoose": "^8.7.2",
     "nodemon": "^3.1.7",
